--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -7,6 +7,28 @@
 
 /* CUSTOM FONTS, etc. */
 
+/* Loading */
+
+#loading {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: block;
+    opacity: 0.7;
+    background-color: #fff;
+    z-index: 99;
+    text-align: center;
+  }
+  
+  #loading-image {
+    position: absolute;
+    top: 100px;
+    left: 240px;
+    z-index: 100;
+  }
+
 /* General */
 
 body {
