--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -55,6 +55,9 @@
               </div>
             
               <div class="row middleRow">
+                  <div id="loading">
+                    <img id="loading-image" src="images/ajax-loader.gif" alt="Loading..." />
+                  </div>
                     <div id="scrollArea" class="col-lg-9 clusterize-scroll text-center availableCardsContainer" class="task">
                         <div id="contentArea" class="row clusterize-content cardsHolder">
                           {{#each card_data}}
@@ -84,7 +87,11 @@
                     </div>
                 </div>
             </div>
-        
+            <script>
+                $(window).load(function() {
+                    $('#loading').hide();
+                });
+            </script>
             <script src="/js/jquery.visible.js"></script>
             <script src="/js/clusterize.js"></script>
             <script src="/js/index.js" type="text/javascript"></script>
